@@ -3,6 +3,7 @@ package com.toudeuk.server.domain.game.repository;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -32,44 +33,31 @@ public class ClickGameCacheRepository {
 	private static final long MAX_CLICK = 1000; // 12000
 	private static final long COOLTIME_MINUTES = 1; // 5분
 
-	@Resource(name = "longRedisTemplate")
-	private ZSetOperations<String, Long> zSetOperationsLong;
-
-	@Resource(name = "StringRedisTemplate")
-	private ZSetOperations<String, String> zSetOperationsString;
-
-	@Resource(name = "longRedisTemplate")
-	private ListOperations<String, Long> listOperations;
-
-	@Resource(name = "longRedisTemplate")
-	private ValueOperations<String, Long> valueOperationsLong;
-
-	@Resource(name = "StringRedisTemplate")
-	private ValueOperations<String, String> valueOperationsString;
-
-	@Resource(name = "integerRedisTemplate")
-	private ValueOperations<String, Integer> valueOperationsInt;
-
 	@Resource(name = "redisTemplate")
-	public ValueOperations<String, String> valueOperations;
+	private ZSetOperations<String, Object> zSetOperations;
+	@Resource(name = "redisTemplate")
+	private ListOperations<String, Object> listOperations;
+	@Resource(name = "redisTemplate")
+	public ValueOperations<String, Object> valueOperations;
 
 	@Autowired
-	public RedisTemplate<String, Object> redisTemplate;
-    @Autowired
-    private UserRepository userRepository;
+	public RedisTemplate<String, String> redisTemplate;
+
+	@Autowired
+	private UserRepository userRepository;
 
 	// 게임 정보 game
 	public void setGameId(Long gameId) {
-		valueOperationsLong.set(GAME_ID_KEY, gameId);
-		log.info("Set game id to " + gameId);
+		valueOperations.set(GAME_ID_KEY, gameId);
 	}
 
 	public boolean existGame() {
-		return valueOperationsLong.get(GAME_ID_KEY) != null;
+		return valueOperations.get(GAME_ID_KEY) != null;
 	}
 
+
 	public Long getGameId() {
-		return valueOperationsLong.get(GAME_ID_KEY);
+		return ((Number)valueOperations.get(GAME_ID_KEY)).longValue();
 	}
 
 	public void setGameCoolTime() {
@@ -85,19 +73,17 @@ public class ClickGameCacheRepository {
 	public LocalDateTime getGameCoolTime() {
 		log.info("valueOperations.get(GAME_COOLTIME_KEY) : " + valueOperations.get(GAME_COOLTIME_KEY));
 
-		{}
-		log.info("LocalDateTime.parse(valueOperations.get(GAME_COOLTIME_KEY) : " + LocalDateTime.parse(valueOperations.get(GAME_COOLTIME_KEY)));
-		return LocalDateTime.parse(valueOperations.get(GAME_COOLTIME_KEY));
+		return LocalDateTime.parse((String)valueOperations.get(GAME_COOLTIME_KEY));
 	}
 
 	// 총 클릭수 click:total
 	public Integer setTotalClick() {
-		valueOperationsInt.set(CLICK_TOTAL_KEY, 0);
+		valueOperations.set(CLICK_TOTAL_KEY, 0);
 		return 0;
 	}
 
 	public Integer addTotalClick() {
-		Long totalClick = valueOperationsInt.increment(CLICK_TOTAL_KEY);
+		Long totalClick = ((Number)valueOperations.increment(CLICK_TOTAL_KEY)).longValue();
 
 		log.info("totalClick : {}", totalClick);
 		if (totalClick.equals(MAX_CLICK)) {
@@ -107,7 +93,7 @@ public class ClickGameCacheRepository {
 	}
 
 	public Integer getTotalClick() {
-		return valueOperationsInt.get(CLICK_TOTAL_KEY);
+		return ((Number)valueOperations.get(CLICK_TOTAL_KEY)).intValue();
 	}
 
 	// 클릭 수 click:count
@@ -115,20 +101,20 @@ public class ClickGameCacheRepository {
 		if(getUsername(userId) == null){
 			return -1;
 		}
-		Double score = zSetOperationsString.incrementScore(CLICK_COUNT_KEY, getUsername(userId), 1);
+		Number score = zSetOperations.incrementScore(CLICK_COUNT_KEY, getUsername(userId), 1);
 		log.info("score : {}", score);
 
 		return score == null ? 1 : score.intValue();
 	}
 
 	public Integer getUserClickCount(Long userId) { // 유저의 클릭 수
-		Double clickCount = zSetOperationsString.score(CLICK_COUNT_KEY, getUsername(userId));
-		log.info("clickCount : {}", zSetOperationsString.score(CLICK_COUNT_KEY, getUsername(userId)));
+		Number clickCount = zSetOperations.score(CLICK_COUNT_KEY, getUsername(userId));
+		log.info("clickCount : {}", zSetOperations.score(CLICK_COUNT_KEY, getUsername(userId)));
 		return clickCount == null ? 0 : clickCount.intValue();
 	}
 
 	public Integer getUserRank(Long userId) { // 유저의 클릭 랭킹
-		Long rank = zSetOperationsString.reverseRank(CLICK_COUNT_KEY, getUsername(userId));
+		Long rank = zSetOperations.reverseRank(CLICK_COUNT_KEY, getUsername(userId));
 		if(rank == null){
 			return -1;
 		}
@@ -137,10 +123,10 @@ public class ClickGameCacheRepository {
 
 
 	public List<RankData.UserScore> getRankingList() {
-		return zSetOperationsString.reverseRangeByScoreWithScores(CLICK_COUNT_KEY, 0, Integer.MAX_VALUE, 0, 10)
+		return zSetOperations.reverseRangeByScoreWithScores(CLICK_COUNT_KEY, 0, Integer.MAX_VALUE, 0, 10)
 				.stream()
-				.map(tuple -> RankData.UserScore.of(tuple.getValue(), tuple.getScore().longValue()))
-				.collect(Collectors.toList());
+				.map(tuple -> RankData.UserScore.of((String)tuple.getValue(), ((Number)tuple.getScore()).longValue()))
+				.toList();
 	}
 
 	// 삭제
@@ -162,11 +148,11 @@ public class ClickGameCacheRepository {
 	public Integer getUserCash(Long userId) {
 
 
-		Integer userCash = valueOperationsInt.get(USER_CASH_KEY + userId);
+		Integer userCash = (Integer) valueOperations.get(USER_CASH_KEY + userId);
 
 		if (userCash == null) {
 			Integer cash = userRepository.findById(userId).get().getCash();
-			valueOperationsInt.set(USER_CASH_KEY + userId, cash);
+			valueOperations.set(USER_CASH_KEY + userId, cash);
 			return cash;
 		}
 
@@ -174,21 +160,21 @@ public class ClickGameCacheRepository {
 	}
 
 	public void updateUserCash(Long userId, long changeCash) {
-		valueOperationsInt.increment(USER_CASH_KEY + userId, changeCash);
+		valueOperations.increment(USER_CASH_KEY + userId, changeCash);
 	}
 
 
 	// 실시간 보상 제공
 	public void reward(Long userId, int reward) {
-		valueOperationsInt.increment(USER_CASH_KEY + userId, reward);
+		valueOperations.increment(USER_CASH_KEY + userId, reward);
 	}
 
 	public void setUsername(Long userId, String nickname) {
-		valueOperationsString.set(NICKNAME_KEY + userId, nickname);
+		redisTemplate.opsForValue().set(NICKNAME_KEY + userId.toString(), nickname);
 	}
 
 	public String getUsername(Long userId) {
-		return valueOperationsString.get(NICKNAME_KEY + userId);
+		return redisTemplate.opsForValue().get(NICKNAME_KEY + userId.toString());
 	}
 
 	private void deleteByPattern(String pattern) {
